update css with some padding fixes and item list cleanup, new styles for collapsed  fieldsets on theme settings page

--- a/css/core/layout.css
+++ b/css/core/layout.css
@@ -41,6 +41,9 @@
 #user-login,
 #user-register,
 #user-pass,
+#search-form,
+#comments-title,
+.section-search .box,
 .section-admin #content .region-inner,
 .breadcrumb-inner,
 .in-maintenance #content,
